--- a/scipy/interpolate/meson.build
+++ b/scipy/interpolate/meson.build
@@ -1,101 +1,105 @@
-fitpack_src = ['fitpack/fpclos.f',
-  'fitpack/sphere.f',
-  'fitpack/cocosp.f',
-  'fitpack/fpched.f',
-  'fitpack/fppocu.f',
-  'fitpack/fprota.f',
-  'fitpack/fppara.f',
-  'fitpack/fpcyt1.f',
-  'fitpack/fpgivs.f',
-  'fitpack/concon.f',
-  'fitpack/fpperi.f',
-  'fitpack/curev.f',
-  'fitpack/concur.f',
-  'fitpack/fpcuro.f',
-  'fitpack/parsur.f',
-  'fitpack/bispev.f',
-  'fitpack/parcur.f',
-  'fitpack/fpknot.f',
-  'fitpack/fprpsp.f',
-  'fitpack/fppasu.f',
-  'fitpack/fpsuev.f',
-  'fitpack/fpgrdi.f',
-  'fitpack/fpback.f',
-  'fitpack/surfit.f',
-  'fitpack/fpsphe.f',
-  'fitpack/fpdeno.f',
-  'fitpack/fppogr.f',
-  'fitpack/fpsurf.f',
-  'fitpack/fptrpe.f',
-  'fitpack/fpcosp.f',
-  'fitpack/splint.f',
-  'fitpack/fpgrre.f',
-  'fitpack/fpfrno.f',
-  'fitpack/fprppo.f',
-  'fitpack/parder.f',
-  'fitpack/fpseno.f',
-  'fitpack/fpintb.f',
-  'fitpack/fpsysy.f',
-  'fitpack/fporde.f',
-  'fitpack/fpcyt2.f',
-  'fitpack/fpgrsp.f',
-  'fitpack/fpgrpa.f',
-  'fitpack/fpchep.f',
-  'fitpack/surev.f',
-  'fitpack/fpcons.f',
-  'fitpack/polar.f',
-  'fitpack/fpinst.f',
-  'fitpack/fpbacp.f',
-  'fitpack/fpregr.f',
-  'fitpack/fpspgr.f',
-  'fitpack/fpadno.f',
-  'fitpack/fpcsin.f',
-  'fitpack/fpdisc.f',
-  'fitpack/splev.f',
-  'fitpack/fptrnp.f',
-  'fitpack/fourco.f',
-  'fitpack/dblint.f',
-  'fitpack/pardeu.f',
-  'fitpack/fpbspl.f',
-  'fitpack/fprank.f',
+fitpack_src = [
   'fitpack/bispeu.f',
-  'fitpack/fpbisp.f',
+  'fitpack/bispev.f',
   'fitpack/clocur.f',
-  'fitpack/fpcoco.f',
-  'fitpack/pogrid.f',
-  'fitpack/fppola.f',
-  'fitpack/spalde.f',
-  'fitpack/fpopdi.f',
-  'fitpack/sproot.f',
-  'fitpack/fpader.f',
-  'fitpack/fpadpo.f',
-  'fitpack/fpcurf.f',
-  'fitpack/splder.f',
-  'fitpack/fpbfout.f',
-  'fitpack/profil.f',
-  'fitpack/fpchec.f',
+  'fitpack/cocosp.f',
+  'fitpack/concon.f',
+  'fitpack/concur.f',
+  'fitpack/cualde.f',
+  'fitpack/curev.f',
   'fitpack/curfit.f',
-  'fitpack/regrid.f',
-  'fitpack/fprati.f',
-  'fitpack/percur.f',
-  'fitpack/fpopsp.f',
+  'fitpack/dblint.f',
   'fitpack/evapol.f',
+  'fitpack/fourco.f',
+  'fitpack/fpader.f',
+  'fitpack/fpadno.f',
+  'fitpack/fpadpo.f',
+  'fitpack/fpback.f',
+  'fitpack/fpbacp.f',
+  'fitpack/fpbfout.f',
+  'fitpack/fpbisp.f',
+  'fitpack/fpbspl.f',
+  'fitpack/fpchec.f',
+  'fitpack/fpched.f',
+  'fitpack/fpchep.f',
+  'fitpack/fpclos.f',
+  'fitpack/fpcoco.f',
+  'fitpack/fpcons.f',
+  'fitpack/fpcosp.f',
+  'fitpack/fpcsin.f',
+  'fitpack/fpcurf.f',
+  'fitpack/fpcuro.f',
+  'fitpack/fpcyt1.f',
+  'fitpack/fpcyt2.f',
+  'fitpack/fpdeno.f',
+  'fitpack/fpdisc.f',
+  'fitpack/fpfrno.f',
+  'fitpack/fpgivs.f',
+  'fitpack/fpgrdi.f',
+  'fitpack/fpgrpa.f',
+  'fitpack/fpgrre.f',
+  'fitpack/fpgrsp.f',
+  'fitpack/fpinst.f',
+  'fitpack/fpintb.f',
+  'fitpack/fpknot.f',
+  'fitpack/fpopdi.f',
+  'fitpack/fpopsp.f',
+  'fitpack/fporde.f',
+  'fitpack/fppara.f',
+  'fitpack/fppasu.f',
+  'fitpack/fpperi.f',
+  'fitpack/fppocu.f',
+  'fitpack/fppogr.f',
+  'fitpack/fppola.f',
+  'fitpack/fprank.f',
+  'fitpack/fprati.f',
+  'fitpack/fpregr.f',
+  'fitpack/fprota.f',
+  'fitpack/fprppo.f',
+  'fitpack/fprpsp.f',
+  'fitpack/fpseno.f',
+  'fitpack/fpspgr.f',
+  'fitpack/fpsphe.f',
+  'fitpack/fpsuev.f',
+  'fitpack/fpsurf.f',
+  'fitpack/fpsysy.f',
+  'fitpack/fptrnp.f',
+  'fitpack/fptrpe.f',
   'fitpack/insert.f',
+  'fitpack/parcur.f',
+  'fitpack/parder.f',
+  'fitpack/pardeu.f',
+  'fitpack/parsur.f',
+  'fitpack/percur.f',
+  'fitpack/pogrid.f',
+  'fitpack/polar.f',
+  'fitpack/profil.f',
+  'fitpack/regrid.f',
+  'fitpack/spalde.f',
   'fitpack/spgrid.f',
-  'fitpack/cualde.f']
+  'fitpack/sphere.f',
+  'fitpack/splder.f',
+  'fitpack/splev.f',
+  'fitpack/splint.f',
+  'fitpack/sproot.f',
+  'fitpack/surev.f',
+  'fitpack/surfit.f'
+]
 
 # TODO: Add flags for 64 bit ints
 fitpack_lib = static_library('fitpack_lib',
   fitpack_src,
-  fortran_args: '-Wno-maybe-uninitialized')
+  fortran_args: '-Wno-maybe-uninitialized'
+)
 
 interpnd = py3.extension_module('interpnd',
   ['interpnd.pyx'],
   c_args: numpy_nodepr_api,
   include_directories: [incdir_numpy],
   dependencies: [py3_dep],
-  install : true,
-  subdir : 'scipy/interpolate')
+  install: true,
+  subdir: 'scipy/interpolate'
+)
 
 _ppoly_c = custom_target('_ppoly_c',
   output: '_ppoly.c',
@@ -104,9 +108,12 @@ _ppoly_c = custom_target('_ppoly_c',
     _cython_tree,
     # _cython_lapack_pxd
   ],
-  command: [cython, '-3', '--fast-fail',
-            '@INPUT0@', '-o', '@OUTPUT@', '-I', '@BUILD_ROOT@'],
+  command: [
+    cython, '-3', '--fast-fail',
+    '@INPUT0@', '-o', '@OUTPUT@', '-I', '@BUILD_ROOT@'
+  ]
 )
+
 # TODO: Depends on cython_lapack.pxd which cannot
 # be added a dependency here. Once it is possible,
 # uncomment the below part.
@@ -115,8 +122,8 @@ py3.extension_module('_ppoly',
   c_args: numpy_nodepr_api,
   include_directories: [incdir_numpy],
   dependencies: [py3_dep],
-  install : true,
-  subdir : 'scipy/interpolate'
+  install: true,
+  subdir: 'scipy/interpolate'
 )
 
 _bspl = py3.extension_module('_bspl',
@@ -124,8 +131,9 @@ _bspl = py3.extension_module('_bspl',
   c_args: numpy_nodepr_api,
   include_directories: ['src/', incdir_numpy],
   dependencies: [py3_dep],
-  install : true,
-  subdir : 'scipy/interpolate')
+  install: true,
+  subdir: 'scipy/interpolate'
+)
 
 # TODO: Add flags for 64 bit ints
 _fitpack = py3.extension_module('_fitpack',
@@ -134,14 +142,15 @@ _fitpack = py3.extension_module('_fitpack',
   link_with: [fitpack_lib],
   include_directories: ['src/', incdir_numpy],
   dependencies: [py3_dep],
-  link_language : 'fortran',
-  install : true,
-  subdir : 'scipy/interpolate')
+  link_language: 'fortran',
+  install: true,
+  subdir: 'scipy/interpolate'
+)
 
 dfitpack_module = custom_target('dfitpack_module',
-  output : ['dfitpack-f2pywrappers.f', 'dfitpackmodule.c'],
-  input : 'src/fitpack.pyf',
-  command : [py3, generate_f2pymod, '@INPUT@', '-o', '@OUTDIR@'],
+  output: ['dfitpack-f2pywrappers.f', 'dfitpackmodule.c'],
+  input: 'src/fitpack.pyf',
+  command: [py3, generate_f2pymod, '@INPUT@', '-o', '@OUTDIR@']
 )
 
 # TODO: Add flags for 64 bit ints
@@ -152,44 +161,50 @@ dfitpack = py3.extension_module('dfitpack',
   dependencies: [py3_dep, lapack],
   link_with: [fitpack_lib],
   install: true,
-  link_language : 'fortran',
-  subdir: 'scipy/interpolate')
+  link_language: 'fortran',
+  subdir: 'scipy/interpolate'
+)
 
 if use_pythran
   _rbfinterp_pythran = custom_target('_rbfinterp_pythran',
     output: ['_rbfinterp_pythran.cpp'],
-    input : '_rbfinterp_pythran.py',
-    command : [pythran, '-E', '@INPUT@', '-o', '@OUTDIR@/_rbfinterp_pythran.cpp'],
+    input: '_rbfinterp_pythran.py',
+    command: [pythran, '-E', '@INPUT@', '-o', '@OUTDIR@/_rbfinterp_pythran.cpp']
   )
+
   _rbfinterp_pythran = py3.extension_module('_rbfinterp_pythran',
-  [_rbfinterp_pythran],
-  cpp_args: ['-Wno-unused-function', '-Wno-unused-variable',
-             '-Wno-deprecated-declarations',
-             '-Wno-cpp', '-Wno-int-in-bool-context',
-             '-Wno-unused-but-set-variable'
-            ] + cpp_args_pythran,
-  include_directories: [incdir_pythran, incdir_numpy],
-  dependencies: [py3_dep],
-  install: true,
-  subdir: 'scipy/interpolate')
+    [_rbfinterp_pythran],
+    cpp_args: [
+      '-Wno-unused-function', '-Wno-unused-variable',
+      '-Wno-deprecated-declarations',
+      '-Wno-cpp', '-Wno-int-in-bool-context',
+      '-Wno-unused-but-set-variable'
+    ] + cpp_args_pythran,
+    include_directories: [incdir_pythran, incdir_numpy],
+    dependencies: [py3_dep],
+    install: true,
+    subdir: 'scipy/interpolate'
+  )
 endif
 
-py3.install_sources(['interpnd_info.py',
-  '__init__.py',
-  '_fitpack_impl.py',
-  '_rbfinterp.py',
-  '_cubic.py',
-  'polyint.py',
-  'fitpack.py',
-  'ndgriddata.py',
-  'fitpack2.py',
-  '_bsplines.py',
-  '_rbfinterp_pythran.py',
-  'rbf.py',
-  'interpolate.py',
-  '_pade.py'],
-  pure : false,
-  subdir : 'scipy/interpolate'
+py3.install_sources([
+    '__init__.py',
+    '_bsplines.py',
+    '_cubic.py',
+    '_fitpack_impl.py',
+    '_pade.py',
+    '_rbfinterp.py',
+    '_rbfinterp_pythran.py',
+    'fitpack.py',
+    'fitpack2.py',
+    'interpnd_info.py',
+    'interpolate.py',
+    'ndgriddata.py',
+    'polyint.py',
+    'rbf.py'
+  ],
+  pure: false,
+  subdir: 'scipy/interpolate'
 )
 
 subdir('tests')
