--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   Python-38-dbg:
     name: Python 3.8-dbg
-    if: "github.repository == 'scipy/scipy' && !contains(github.event.head_commit.message, '[ci skip]') && !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.head_commit.message, '[skip github]')"
+    if: "github.repository == 'rgommers/scipy' && !contains(github.event.head_commit.message, '[ci skip]') && !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.head_commit.message, '[skip github]')"
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
@@ -37,7 +37,8 @@ jobs:
           python3.8-dbg -c 'import sys; print("Python debug build:", hasattr(sys, "gettotalrefcount"))'
           python3.8-dbg -m pip install --upgrade pip 'setuptools<58.5' wheel
           python3.8-dbg -m pip install --upgrade numpy cython pytest pytest-xdist pybind11
-          python3.8-dbg -m pip install --upgrade mpmath gmpy2==2.1.0rc1 pythran threadpoolctl
+          python3.8-dbg -m pip install --upgrade mpmath gmpy2==2.1.0rc1 threadpoolctl
+          python3.8-dbg -m pip install git+https://github.com/serge-sans-paille/pythran.git@feature/0.11.0
           python3.8-dbg -m pip uninstall -y nose
           cd ..
       - name: Building SciPy
@@ -53,7 +54,7 @@ jobs:
 
   test_numpy_main:
     name: NumPy main
-    if: "github.repository == 'scipy/scipy' && !contains(github.event.head_commit.message, '[ci skip]') && !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.head_commit.message, '[skip github]') && !contains(github.ref, 'maintenance/') && !contains(github.base_ref, 'maintenance/')"
+    if: "github.repository == 'rgommers/scipy' && !contains(github.event.head_commit.message, '[ci skip]') && !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.head_commit.message, '[skip github]') && !contains(github.ref, 'maintenance/') && !contains(github.base_ref, 'maintenance/')"
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -84,7 +85,7 @@ jobs:
         which python
         pip install --user git+https://github.com/numpy/numpy.git
         python -m pip install --user setuptools wheel cython pytest pybind11 pytest-xdist
-        pip install --user git+https://github.com/serge-sans-paille/pythran.git
+        pip install --user git+https://github.com/serge-sans-paille/pythran.git@feature/0.11.0
         python -m pip install -r mypy_requirements.txt
 
     - name: Mypy
