--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -173,7 +173,8 @@ stages:
             python3.8 get-pip.py && \
             pip3 --version && \
             pip3 install 'setuptools<58.5' wheel --user && \
-            pip3 install numpy==1.17.3 cython==0.29.18 pybind11 pytest pytest-timeout pytest-xdist pytest-env pytest-cov Pillow mpmath matplotlib==3.1.3 pythran --user && \
+            pip3 install numpy==1.17.3 cython==0.29.18 pybind11 pytest pytest-timeout pytest-xdist pytest-env pytest-cov Pillow mpmath matplotlib==3.1.3 --user && \
+            pip install git+https://github.com/serge-sans-paille/pythran.git@feature/0.11.0 && \
             apt-get -y install gcc-5 g++-5 gfortran-8 wget && \
             cd .. && \
             mkdir openblas && cd openblas && \
@@ -285,7 +286,6 @@ stages:
         numpy==1.21.4
         Pillow
         pybind11
-        pythran
         pytest
         pytest-cov
         pytest-env
@@ -302,6 +302,7 @@ stages:
     # _distributor_init.py in our wheels repo is capable of
     # loading the DLLs from a master branch wheel build
     - powershell: |
+        python -m pip install git+https://github.com/serge-sans-paille/pythran.git@feature/0.11.0
         git clone -n --depth 1 https://github.com/MacPython/scipy-wheels.git
         cd scipy-wheels
         git checkout HEAD _distributor_init.py
